# sockChat

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/: client.cpp  server.cpp
